--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <div class="bg-gradient-to-br from-primary-600 via-primary-700 to-primary-800 text-white">
         <div class="max-w-7xl mx-auto py-8 sm:py-12 px-4 sm:px-6 lg:px-8 text-center">
             <h1 class="text-3xl sm:text-4xl lg:text-5xl xl:text-6xl font-extrabold tracking-tight">
-                Pembagian Kelompok yang Adil
+                Pembagian Kelompok
             </h1>
             <p class="mt-4 sm:mt-6 max-w-2xl mx-auto text-lg sm:text-xl text-blue-100">
-                Masukkan nama siswa dan judul proyek, biarkan sistem lotre pintar kami membuat kelompok yang benar-benar acak!
+                Masukkan nama siswa dan judul proyek, biarkan sistem pintar kami membuat kelompok yang benar-benar acak!
             </p>
             <div class="mt-8 sm:mt-10 flex justify-center">
                 <div class="rounded-md shadow">
