--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Tugas Analisis Data
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
             <div class="text-center">
                 <p class="text-gray-600 text-sm">
-                    Dibuat dengan <i data-feather="heart" class="inline text-red-500 h-4 w-4"></i> Made In Kelas B S2, Angkatan ke 3
+                    Made In Kelas B S2, Angkatan ke 3
                 </p>
                 <p class="mt-2 text-gray-500 text-xs">
                     <i data-feather="clock" class="inline h-3 w-3"></i> Data tidak disimpan - daftar Anda tetap pribadi
